# Grace-Ternary-Join

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: FacebookBinaryBenchmark.cpp  FacebookTernaryBenchmark.cpp  LiveJournalBinary.cpp  LiveJournalTernary.cpp  TwitchBenchmarkBinary.cpp  TwitchBenchmarkTernary.cpp  TwitterBenchmarkBinary.cpp  TwitterBenchmarkTernary.cpp  WikiBenchmarkBinary.cpp  WikiBenchmarkTernary.cpp  local.cmake
benchmark/resources/facebook/: dbconfig.csv
benchmark/resources/livejournal/: dbconfig.csv
benchmark/resources/twitch/: dbconfig.csv
benchmark/resources/twitter/: dbconfig.csv
benchmark/resources/wiki/: dbconfig.csv
scripts/: parse_tuples.cpp  preprocess_facebook.sh  preprocess_livejournal.sh  preprocess_twitch.sh  preprocess_twitter.sh  preprocess_wiki.sh  pull_datasets.sh
src/: Database.cpp  Database.h  Table.cpp  Table.h  constants.h  local.cmake  main.cpp  typedefs.h
src/benchmark/: Benchmark.h  BenchmarkCounter.h
src/joinstrategy/: Bucket.cpp  Bucket.h
src/joinstrategy/binary/: GraceHashJoin.cpp  GraceHashJoin.h  JoinStrategy.h
src/joinstrategy/ternary/: GraceHashJoin.cpp  GraceHashJoin.h  JoinStrategy.h
src/operator/: BinaryJoinOperator.cpp  BinaryJoinOperator.h  BucketOperator.cpp  BucketOperator.h  CounterOperator.cpp  CounterOperator.h  Operator.h  PrintOperator.cpp  PrintOperator.h  ScanOperator.cpp  ScanOperator.h  TernaryJoinOperator.cpp  TernaryJoinOperator.h
src/utils/: Logger.h  Page.cpp  Page.h  TemporaryDirectory.cpp  TemporaryDirectory.h  TemporaryFile.cpp  TemporaryFile.h  Utils.cpp  Utils.h
test/: bucket_test.cpp  hash_ternary_join_test.cpp  local.cmake
